fix: reject tabu size 0; validate VALUE/MOVE_TABU configs; remove dead else-if
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>